[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=1]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=3]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=4]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton React.png" type="Texture" id=5]
[ext_resource path="res://assets/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=6]
[ext_resource path="res://assets/HealthBars/HealthBarProgress.png" type="Texture" id=7]
[ext_resource path="res://src/Actors/Skeleton.gd" type="Script" id=70]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.7532, 96.6448 )

[sub_resource type="Animation" id=2]
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -90, 32 ), 180.0 ],
"method": "set_animation_position"
}, {
"args": [ 12.0 ],
"method": "shift_animation_x"
}, {
"args": [ 36.0 ],
"method": "shift_animation_x"
}, {
"args": [ -10.0 ],
"method": "shift_animation_x"
}, {
"args": [ -15.0 ],
"method": "shift_animation_x"
}, {
"args": [ -10.0 ],
"method": "shift_animation_x"
}, {
"args": [ -13.0 ],
"method": "shift_animation_x"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( -40, 35 ), 82.0 ],
"method": "set_ray_position"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_attack"
} ]
}

[sub_resource type="Animation" id=3]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Die:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 14 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -50, 32 ), 96.0 ],
"method": "set_animation_position"
}, {
"args": [ 10.0 ],
"method": "shift_animation_x"
}, {
"args": [ -10.0 ],
"method": "shift_animation_x"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("React:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( -35, 32 ), 75.0 ],
"method": "set_animation_position"
} ]
}

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 24
script = ExtResource( 70 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -50, 32 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -56.721, 41.1014 )
scale = Vector2( 5.82712, 11.892 )
process_parent = true
physics_process_parent = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -40, 35 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Die = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/React = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="Idle" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
hframes = 11

[node name="Attack" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
flip_h = true
hframes = 18
frame = 1

[node name="Die" type="Sprite" parent="."]
visible = false
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
hframes = 15
frame = 14

[node name="Hit" type="Sprite" parent="."]
visible = false
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
hframes = 8

[node name="React" type="Sprite" parent="."]
visible = false
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )
hframes = 4
frame = 3

[node name="Walk" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 13

[node name="ProjectileDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileDetector"]
position = Vector2( -50, 32 )
scale = Vector2( 1.1, 1.05 )
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -115.0
margin_top = -129.024
margin_right = 29.0657
margin_bottom = 15.9763
value = 100.0
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_attack_finished"]
[connection signal="area_entered" from="ProjectileDetector" to="." method="_on_ProjectileDetector_area_entered"]
[connection signal="body_shape_entered" from="ProjectileDetector" to="." method="_on_ProjectileDetector_body_shape_entered"]
